site_assets/css/style.css
/* ... */
.alt-layout .two-column-display {
	padding-bottom: 386px;
}

.single-column-display + .multi-column-display {
	margin-top: 0;
}

.home-page .multi-column-display {
	margin-top: 0;
	padding-top: 30px;
	padding-bottom: 0;
}

.home-page .multi-column-display .column {
	vertical-align: top;
}

.main-wrapper.stacker {
	min-height: 0;
	padding-bottom: 24px;
}

.main-wrapper.stacker:first-of-type {
	margin-top: 156px;
}

.main-wrapper.stacker:last-of-type {
	/* padding-bottom: 478px; */
}

.blog-summary {
	margin: 0 0 36px;
	/* padding: 0 12px 0; */
	font-size: 24px;
	line-height: 36px;
}

.blog-summary.link-post {
	/* padding-left: 36px; */
}

.blog-summary.native-post {
	/* padding-top: 30px;
	padding-bottom: 30px;
	border-top: 1px solid #d8d8d8;
	border-bottom: 1px solid #d8d8d8; */
}

.blog-summary.native-post + .blog-summary.native-post {
	margin-top: 0;
	padding-top: 0;
	border-top: 0;
}

.blog-summary h1 {
	font-family: "Franklin ITC Pro Bold", sans-serif;
	font-size: 30px;
}

.sponsored .basic-title + .blog-summary h1 {
	padding-right: 15%;
}

.blog-summary h1 a {
	color: #222;
}

.blog-summary.link-post h1 {
	/* text-indent: -30px; */
}


.blog-summary.native-post h1 {

}

.blog-summary.native-post h1 a {
	/* color: #222; */
}

.blog-summary.link-post h1:before {
	/* content: "♻ ";
	content: "➣ ";
	content: "⚜ ";
	content: "➽ "; */
	content: " ";
	background-image: url(../img/icon_compass.svg);
	background-size: contain;
	display: inline-block;
	width: 20px;
	height: 20px;
	/* font-size: 24px; */
	margin-right: 6px;
	vertical-align: baseline;
	/* padding-top: 2px; */
}

.no-svg .blog-summary.link-post h1:before {
	background-image: url(../img/icon_compass.png);
}

.blog-summary.link-post p {
	/* font-family: "Franklin ITC Pro Light", sans-serif; */
}

.blog-summary.link-post .byline,
.blog-summary.link-post .byline a {
	font-family: "Franklin ITC Pro Light", sans-serif;
	font-style: italic;
	font-size: 14px;
	color: #999;
}

.blog-summary.native-post .byline {
	font-size: 18px;
	font-style: italic;
}

.blog-summary.native-post .byline a.author,
.entry-details a.author,
.meta a.author,
.blog-summary.native-post .byline a.aside-author,
.entry-details a.aside-author,
.meta a.aside-author {
	font-family: "Franklin ITC Pro Bold", sans-serif;
	font-style: normal;
	text-transform: uppercase;
}

.item-summary {
	display: inline-block;
	vertical-align: top;
	width: 50%;
}

.item-summary:nth-child(even) {
	padding: 0 12px 24px 0;
}

.item-summary:nth-child(odd) {
	padding: 0 0 24px 12px;
}

.item-summary:nth-of-type(4n) {
	margin-right: 0;
}

.item-summary .column-summary-header {
	margin-bottom: 18px;
	text-align: center;
}

.item-summary .column-summary-header h1 {
	font-family: "Franklin ITC Pro Bold", sans-serif;
	font-weight: normal;
	font-size: 24px;
}

.item-summary .column-summary-header .meta {
	font-size: 14px;
}

.item-summary .column-summary-header + p {
	margin-bottom: 18px;
	font-size: 18px;
	line-height: 24px;
}

.secondary-column .item-summary,
.more-content .item-summary {
	width: auto;
}

.more-content .item-summary {
	margin-right: 0;
}

.item-summary.article img {
	display: block;
	margin: 0 auto 12px;
}

.item-summary.article .column-name {
	margin-bottom: 4px;
	font-size: 12px;
	line-height: 16px;
}

.item-summary.article > h1 {
	margin-bottom: 2px;
	font-size: 18px;
	line-height: 24px;
}

.item-summary:not(.article) > h1 {
	/* font-size: 14px;
	line-height: 18px;
	font-style: italic; */
	font-size: 18px;
	line-height: 24px;
	line-height: 24px;
}

.item-summary:not(.topic) > h1 a {
	color: #222;
}

.item-summary.topic > h1 a {
	padding-right: 4px;
	font-family: "Franklin ITC Pro Bold", sans-serif;
	font-weight: normal;
	font-style: normal;
	/* text-transform: uppercase; */
}

.item-summary > p {
	margin-bottom: 12px;
	font-size: 14px;
	line-height: 24px;
}

.secondary-column .item-summary > p {
	/* clear: both; */
}

.item-summary.article p,
.item-summary.link-post p {
	margin-bottom: 0;
}

.item-summary footer {
	font-size: 12px;
	line-height: 24px;
	color: #888;
}

.item-summary footer a {
	color: #888;
}

.item-summary:not(.article) > h2 {
	font-size: 14px;
	line-height: 24px;
	font-family: "Franklin ITC Pro Bold";
	font-weight: normal;
	font-style: italic;
}

.item-summary > h2:after {
	content: ":";
}

.item-summary li {
	font-size: 14px;
	line-height: 24px;
	border-top: 1px dotted #bfbfbf;
	font-style: italic;
}

.item-summary li a {
	position: relative;
	display: block;
	color: #222;
}

.item-summary li a span {
	position: absolute;
	right: 0;
}

.wide-hero {
	position: relative;
	width: 960px;
	max-width: 100%;
	min-height: 220px;
	margin: -12px auto 0;
	text-align: center;
}

@media only screen and (min-width: 87.5em) { /* 1400px */

.wide-hero.responsive-hero {
	width: 1400px;
	max-width: 1400px;
	margin: -12px -200px 0 -200px;
}

}

@media only screen and (max-width: 28.125em) { /* 450px */

.wide-hero.responsive-hero {
	max-height: 300px;
}

.wide-hero.responsive-hero img {
	max-height: 268px;
}

}

.wide-hero figcaption {
	visibility: hidden;
	width: 0;
	height: 0;
	overflow: hidden;
}

.home-page:not(.alt-layout) .wide-hero,
.issue-page .wide-hero {
	padding-top: 96px;
}

.home-page.alt-layout .wide-hero {
	min-height: 0;
	margin-top: 12px;
}

.article-layout .main-content > .tall-hero {
	position: relative;
	float: left;
	width: 348px;
	max-width: 40%;
	min-height: 100px;
	margin: 0 24px 60px 0;
	padding-top: 48px;
}

.entry-header .issue-number,
.wide-hero .issue-number,
.tall-hero .issue-number,
.issue-page .logo-holder + .issue-number {
	position: absolute;
	bottom: 24px;
	left: -24px;
	width: 120px;
	height: 120px;
	padding: 52px 0 0 0;
	color: #fff;
	font-family: "Franklin ITC Pro Bold", sans-serif;
	font-size: 54px;
	letter-spacing: -.025em;
	font-weight: normal;
	text-align: center;
	font-style: normal;

}
/* ... */

